--- a/DivaUserGuide2012.tex
+++ b/DivaUserGuide2012.tex
@@ -62,10 +62,9 @@
 
 
 %----------------------------------------------------
-\pagestyle{empty}
+\pagestyle{plain}
 
 \input{18-divademecum} % --> to prepare (2D and 4D)
-
 \input{19-DivaLinks}
 
 \bibliography{20-DivaPublications}
