added content of divaintegral in chapter Error

--- a/6-DivaParameters.tex
+++ b/6-DivaParameters.tex
@@ -1,4 +1,4 @@
-\chapter[Analysis parameters]{Analysis parameters in \diva\label{chap:analysisparameters}}
+\chapter[Determination of analysis parameters]{Determination of analysis parameters \label{chap:analysisparameters}}
 % ----------------------------------------------------------------------------------------
 
 \lettrine[lines=2, loversize=-0.1, lraise=0.1]{T}{he} purpose of this chapter is to describe the validations tools included in the \diva software.  Generalized Cross-Validation is has been used to deduce statistical estimators from the dataset \citep{BRANKART96}. In the present version, it serves for the determination of the signal-to-noise ratio.
